use non-deprecated method