@@ -4,10 +4,10 @@ public class MainThreadValidator {
 	long main_thread_id;
 
 	public MainThreadValidator() {
-		this.main_thread_id = Thread.currentThread().getId();
+		this.main_thread_id = Thread.currentThread().threadId();
 	}
 
 	public boolean is_main_thread() {
-		return Thread.currentThread().getId() == main_thread_id;
+		return Thread.currentThread().threadId() == main_thread_id;
 	}
 }
